--- a/package.json
+++ b/package.json
@@ -1,3 +1,19 @@
 {
-    "type": "module"
+  "type": "module",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
+  },
+  "name": "entregable-2-archivos",
+  "version": "1.0.0",
+  "main": "./src/server.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.js"
+  },
+  "description": ""
 }
